gobmkida/c3/new_position
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3217:13: error: subscripted value is not an array, pointer, or vector
liberty_mark[0] = 0; 
~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3230:13: error: subscripted value is not an array, pointer, or vector
liberty_mark[i] = -1; 
~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3254:18: error: subscripted value is not an array, pointer, or vector
v6 = liberty_mark[0]; 
     ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3279:25: error: use of undeclared identifier 'byte_9C689F'
v14 = ( unsigned __int8)byte_9C689F[origin]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3280:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[origin] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3293:25: error: use of undeclared identifier 'byte_9C689F'
v14 = ( unsigned __int8)byte_9C689F[origin]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3294:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[origin] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3297:6: error: use of undeclared identifier 'dword_A9019C'
if ( dword_A9019C[origin] != v6 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3306:1: error: use of undeclared identifier 'dword_A9019C'
dword_A9019C[origin] = v6; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3322:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[origin] || string_number[origin + 384] == v6 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3324:30: error: use of undeclared identifier 'byte_9C688C'
if ( v9 == ( unsigned __int8)byte_9C688C[origin] ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/engine/board.c:3383:13: error: subscripted value is not an array, pointer, or vector
liberty_mark[0] = v6; 
~~~~~~~~~~~~^~
12 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_position/src/obj/1/board.o] Error 1
